patch: Support Chennai City Vlog Data

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                         <select id="city-select">
                             <option value="madurai" selected>Madurai, TN</option>
                             <option value="coimbatore">Coimbatore, TN</option>
+                            <option value="chennai">Chennai, TN</option>
                         </select>
                     </div>
                 </div>
