--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                         <span class="toggle-label">Open Now</span>
                     </label>
                     <div class="location-filter">
+                        <button id="locate-btn" title="Find spots near me">
+                            <i class="fa-solid fa-crosshairs"></i>
+                        </button>
                         <i class="fa-solid fa-location-dot"></i>
                         <select id="city-select">
                             <option value="madurai" selected>Madurai, TN</option>
